<resources>
    <string name="app_name">移动应用开发实验</string>
    <!--程序开始介绍-->
    <string name="user_msg">你的班级&#160;你的名字&#160;19000</string>
    <string name="program4">实验4&#12288;Android用户界面</string>
    <string name="program5">实验5&#12288;组件通信与广播</string>
    <string name="program6">实验6&#12288;后台服务</string>
    <string name="program7">实验7&#12288;数据存储与访问</string>
    <string name="program8">实验8&#12288;位置服务与地图应用</string>
    <string name="program_info">点击查看程序效果</string>
    <string name="program_ok">确定</string>
    <string name="program_cancel">取消</string>
    <string name="program_start">开始</string>
    <string name="program_stop">停止</string>


    <!--实验四 Android用户界面 -->
    <!--    1.ButtonDemo 程序-->
    <string name="program4_title_1">1.建立一个“ButtonDemo”的程序，包含Button和ImageButton两个按钮，上方
        是“Button按钮”，下方是一个ImageButton控件</string>
    <string name="button_default">Button</string>
    <string name="button_Image">ImageButton</string>
    <!--    2.Checkbox 程序-->
    <string name="program4_title_2">2.建立一个“CheckboxRadiobuttonDemo”程序，包含五个控件，从上至下分别
        是TextView01、CheckBox01、 CheckBox02、RadioButton01、RadioButton02，当选择RadioButton01，
        RadioButton02则无法选择</string>
    <string name="checkbox1">CheckBox01</string>
    <string name="checkbox2">CheckBox02</string>
    <string name="radio1">RadioButton01</string>
    <string name="radio2">RadioButton02</string>

    <!--    3.“TabDemo”程序-->
    <string name="program4_activity_name_3">Tab&#160;Demo</string>
    <string name="program4_title_3">3.建立一个“TabDemo”程序，包含三个XML文件，分别为tab1.xml、tab2.
        xml和tab3.xml，这3个文件分别使用线性布局、相对布局和绝对布局示例中的main.xml的代码，并将布局的
        ID分别定义为layout01、layout02和layout03</string>
    <string name="tab1">1.第一个标签页</string>
    <string name="tab2">2.第二个标签页</string>
    <string name="tab3">3.第三个标签页</string>

    <!--    4.“MyContextMenu”程序，来完成Android菜单的功能。-->
    <string name="program4_activity_name_4">MyContextMenu</string>
    <string name="program4_title_4">4.建立一个“MyContextMenu”程序，来完成Android菜单的功能。</string>
    <string name="program4_menu_info">长按查看快捷菜单</string>

    <!--    实验五 组件通信与广播-->
    <string name="program5_title_1">1.使用“IntentDemo”程序来完成如何使用Intent启动新的Activity</string>
    <string name="program5_title_2">2.使用“ActivityCommunication”说明了如何以Sub-Activity方式启动子
        Activity，以及使用Intent进行组件间通信</string>
    <string name="program5_title_3">3.使用“IntentResolutionDemo”说明了如何在AndroidManifest.xml文件中
        注册Intent过滤器，以及如何设置 intent-filter 节点属性来捕获指定的Intent</string>
    <string name="program5_title_4">4.使用“BroadcastReceiverDemo”说明了如何在应用程序中注册Broadcast
        Receiver，并接收指定类型的广播消息</string>
    <string name="program5_title_5">思考题： 使用“WebViewIntentDemo”说明如何隐式启动Activity</string>
    <string name="program5_2_child1">SubActivity1</string>
    <string name="program5_2_child2">SubActivity2</string>
    <string name="program5_2_child1_info">在下方输入框内输入文字，点击确认查看效果</string>
    <string name="program5_2_child1_info2">这里的文字会传到上一页</string>
    <string name="program5_2_child2_info1">这一页没有返回内容</string>
    <string name="program5_2_child3_info1">点击按钮进入浏览器</string>
    <string name="program5_2_child3_info2">点击按钮进入拨号</string>
    <string name="program5_2_child4_info1">通过intent传递的消息</string>
    <string name="program5_2_child4_info2">发送</string>

    <!--    实验六-->
    <string name="program6_title_1">1．使用“SimpleRandomServiceDemo”程序显式启动服务在应用程序中建立Service</string>
    <string name="program6_title_2">2．使用“ThreadRandomServiceDemo”程序使用线程持续产生随机数</string>
    <string name="program6_title_3">3．使用“SimpleMathServiceDemo”程序使用绑定方式使用Service</string>
    <string name="program6_title_4">4．使用“RemoteMathServiceDemo”程序，说明如何创建跨进程</string>

    <!--    实验七-->
    <string name="program7_title_1">1. 通过SimplePreferenceDemo说明SharedPreferences的文件保存位置和保存格式。</string>
    <string name="program7_title_2">2．通过InternalFileDemo程序实现在内部存储器上进行文件写入和读取。</string>
    <string name="program7_title_3">3．通过ResourceFileDemo程序实现如何在程序运行时访问资源文件。</string>
    <string name="program7_title_4">4．通过SQLiteDemo来实现对数据库操作的一个示例。</string>

    <!--    实验八-->
    <string name="program8_title_1">1. 使用“CurrentLocationDemo”程序来完成显示当前位置新的功能，并能
        够监视设备的位置变化的功能。</string>
    <string name="program8_title_2">2．使用“MapOverlayDemo”来实现如何在Google地图上添加覆盖层，并在
        预订的物理坐标上显示提示信息。</string>
</resources>
