<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <TextView
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        style="@style/QDCommonTitle"
        android:gravity="center"
        android:id="@+id/textShow"
        android:text="@string/program5_2_child1_info"
        />

    <EditText
        android:id="@+id/edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="15dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="15dp"
        android:text="@string/program5_2_child1_info2"
        />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:padding="10dp"
        android:layout_height="wrap_content"
        >
        <com.qmuiteam.qmui.widget.roundwidget.QMUIRoundButton
            android:id="@+id/btn_ok"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/program_ok"
            app:qmui_radius="4dp"/>
        <!--需要xmlns:app="http://schemas.android.com/apk/res-auto" 引入-->

        <com.qmuiteam.qmui.widget.roundwidget.QMUIRoundButton
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/program_cancel"
            app:qmui_radius="4dp"/>
    </LinearLayout>

</LinearLayout>