<?xml version="1.0" encoding="utf-8"?>
<com.qmuiteam.qmui.widget.QMUIWindowInsetLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/qmui_config_color_white"
        android:fitsSystemWindows="true"
        app:qmui_skin_background="?attr/app_skin_common_background">

        <TextView
            android:id="@+id/app_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="80dp"
            android:textColor="?attr/qmui_config_color_gray_1"
            android:textSize="32sp"
            android:text="@string/app_name"/>

        <TextView
            android:id="@+id/student_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/app_title"
            android:layout_marginBottom="40dp"
            android:textColor="?attr/qmui_config_color_gray_1"
            android:textSize="20sp"
            android:text="@string/user_msg"/>


        <!--btn_4-->
        <com.qmuiteam.qmui.widget.roundwidget.QMUIRoundButton
            android:id="@+id/btn_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/student_msg"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="?attr/qmui_content_spacing_horizontal"
            android:layout_marginRight="?attr/qmui_content_spacing_horizontal"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="10dp"
            android:text="@string/program4"
            app:qmui_isRadiusAdjustBounds="true"/>
        <!--btn_5-->
        <com.qmuiteam.qmui.widget.roundwidget.QMUIRoundButton
            android:id="@+id/btn_5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_4"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="?attr/qmui_content_spacing_horizontal"
            android:layout_marginRight="?attr/qmui_content_spacing_horizontal"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="10dp"
            android:text="@string/program5"
            app:qmui_isRadiusAdjustBounds="true"/>
        <!--btn_6-->
        <com.qmuiteam.qmui.widget.roundwidget.QMUIRoundButton
            android:id="@+id/btn_6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_5"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="?attr/qmui_content_spacing_horizontal"
            android:layout_marginRight="?attr/qmui_content_spacing_horizontal"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="10dp"
            android:text="@string/program6"
            app:qmui_isRadiusAdjustBounds="true"/>
        <!--btn_7-->
        <com.qmuiteam.qmui.widget.roundwidget.QMUIRoundButton
            android:id="@+id/btn_7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_6"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="?attr/qmui_content_spacing_horizontal"
            android:layout_marginRight="?attr/qmui_content_spacing_horizontal"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="10dp"
            android:text="@string/program7"
            app:qmui_isRadiusAdjustBounds="true"/>
        <!--btn_8-->
        <com.qmuiteam.qmui.widget.roundwidget.QMUIRoundButton
            android:id="@+id/btn_8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_7"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="?attr/qmui_content_spacing_horizontal"
            android:layout_marginRight="?attr/qmui_content_spacing_horizontal"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="10dp"
            android:text="@string/program8"
            app:qmui_isRadiusAdjustBounds="true"/>

    </RelativeLayout>


</com.qmuiteam.qmui.widget.QMUIWindowInsetLayout>